syntax = "proto3";

package kuma.mesh.v1alpha1;

import "api/mesh/options.proto";
import "api/mesh/v1alpha1/selector.proto";

option go_package = "github.com/kumahq/kuma/api/mesh/v1alpha1";

// TrafficLog defines log for traffic between dataplanes.
message TrafficLog {
  option (kuma.mesh.resource).name = "TrafficLogResource";
  option (kuma.mesh.resource).type = "TrafficLog";
  option (kuma.mesh.resource).package = "mesh";
  option (kuma.mesh.resource).kds = "model.GlobalToZonesFlag";
  option (kuma.mesh.resource).ws.name = "traffic-log";
  option (kuma.mesh.resource).allow_to_inspect = true;

  // List of selectors to match dataplanes that are sources of traffic.
  repeated Selector sources = 1;

  // List of selectors to match services that are destinations of traffic.
  repeated Selector destinations = 2;

  // Configuration defines settings of the logging.
  message Conf {
    // Backend defined in the Mesh entity.
    string backend = 1;
  }

  // Configuration of the logging.
  Conf conf = 3;
}
